--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,3 +19,6 @@ requests = "^2.32.3"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.ruff]
+line-length = 100
