--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ graphviz = "^0.20.3"
 torch = "^2.5.1"
 requests = "^2.32.3"
 tensorboard = "^2.19.0"
+transformers = "^4.49.0"
 
 
 [build-system]
